<resources>
    <string name="app_name" translatable="false">Superb Cloner</string>
    <string name="app_alias_name" translatable="false">Superb Cloner</string>
    <string name="enter_super_clone" translatable="false">Start</string>
    <string name="app_icon" translatable="false">app_icon</string>
    <string name="appwall_title">Discover</string>
    <string name="feel_lucky" translatable="false">Feel Lucky</string>
    <string name="booster_title" translatable="false">Super Boost</string>
    <string name="action_settings">Settings</string>
    <string name="most_popular_apps">Most Popular</string>
    <string name="more_apps">More Supported</string>
    <string name="sponsor_text">Sponsored</string>
    <string name="btn_clone">Clone</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="cloning">Cloning...</string>
    <string name="cloning_tips">%s is being cloned ...</string>
    <string name="clone_error">Sorry, some error happen during clone. Please restart Superb Cloner and try again.</string>
    <string name="app_starting_tips">%s is starting ...</string>
    <string name="first_start_tips">It may take a little longer for the first start.</string>
    <string name="start_with_arm64">Starting with Superb Cloner 64bit support library...</string>
    <string name="upgrade_start_tips">It may take a little longer as this app was just upgraded.</string>
    <string name="clone_success">%s is ready. Enjoy it now!</string>
    <string name="notifications">Notifications</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="settings">Settings</string>
    <string name="content_popular">Hot Cloned</string>
    <string name="content_recommend">Editor Picks</string>
    <string name="install">Install</string>
    <string name="delete_dialog_title">Caution</string>
    <string name="delete_dialog_content">Removing this cloned app means\n deleting all of its data.</string>
    <string name="delete_dialog_left">Cancel</string>
    <string name="delete_dialog_right">Delete</string>
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_content">New version is coming! We improved a lot on version %s. Would you like to update your Superb Cloner now?</string>
    <string name="update_dialog_left">Ignore</string>
    <string name="update_dialog_right">Update</string>
    <string name="dialog_rating_us_content">Enjoy using Superb Cloner app?</string>
    <string name="dialog_feedback_content">Would you kindly give us some feedback to help improve it?</string>
    <string name="not_really">Not Really</string>
    <string name="no_thanks">No, thanks</string>
    <string name="dialog_love_title">Love Superb Cloner</string>
    <string name="dialog_permission_title">Grant Permission</string>
    <string name="dialog_permission_content">Please allow permission request from Superb Cloner, otherwise some cloned apps and Google Play Service will not work properly.</string>
    <string name="dialog_love_content">Would you mind give us a 5-star rating on the Play Store? It will inspire us and we appreciate your support!</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="star_rating">Go 5-star rating now</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="installFailure">Sorry, this app is not supported yet, and we are coming up with it soon.</string>
    <string name="start_tips">Let\'s get started by cloning\n your first app here!</string>
    <string name="long_press_tips">Long press &amp; drag it to add shortcut on home screen or remove it.</string>
    <string name="arm64_dialog_title">Note</string>
    <string name="arm64_dialog_content">Detected 64bit libraries in %s. Suggest install 64bit support packages if meet error. Do you want to install now?</string>
    <string name="notification_decription">Enable or disable notifications from cloned application</string>
    <string name="notification_detail_setting">Enable notification for app</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="share_with_friends_tip">I am glad to invite you to use this wonderful application %s. You can download it here:</string>
    <string name="feedback_hint">Please tell us the detail about the problem you met , and please tell us the steps to reproduce it and better with screenshot.</string>
    <string name="button_submit">Submit</string>
    <string name="submit_success">Thanks for providing feedback!</string>
    <string name="feedback_no_description">Description can not be empty!</string>
    <string name="feedback_go_faq">Click here to check our handy FAQ.</string>
    <string name="extra_feedback_decription">We will resolve the issue for you ASAP and appreciate your help to improve the product!</string>
    <string name="toast_shortcut_added">Shortcut added</string>
    <string name="toast_shortcut_invalid">Shortcut is invalid</string>
    <string name="toast_no_lucky">Sorry, no lucky content this time. Please try again later.</string>
    <string name="settings_shortcut_title">Shortcut</string>
    <string name="check_update"><u>Check Update</u></string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="settings_shortcut_content">Enable to auto-add shortcut when cloning apps</string>
    <string name="settings_gms">Enable Google Play service for clones</string>
    <string name="settings_gms_title">Google Play Service</string>
    <string name="settings_adfree_title">Join VIP</string>
    <string name="settings_adfree_content">Become premium user of Superb Cloner</string>
    <string name="adfree_dialog_content">Become premium user of Superb Cloner and turn off all ADs in this app. Do you want to buy now?</string>
    <string name="settings_gms_enable_toast">Google Play Service is enabled</string>
    <string name="settings_gms_disable_toast">Google Play Service is disabled</string>
    <string name="settings_gms_disable_notice">Disable Google play service will decrease memory and power usage, and optimize the launch speed for cloned application. But some application may not work properly if disable it. Are you sure to disable Google play service?</string>
    <string name="settings_gms_enable_notice">Enable Google play service may consume more memory and CPU. Do you want to enable Google play service?</string>
    <string name="settings_privacy_locker_content">Click to set privacy locker for cloned apps</string>
    <string name="settings_notification_content">Click to enable/disable notification from cloned apps</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_of_service">Terms of Service</string>
    <string name="settings_terms_text">Terms of Service and Privacy Policy</string>
    <string name="settings_follow_us">Follow us on Facebook Page</string>
    <string name="settings_join_us">Join Our Community</string>
    <string name="settings_right" translatable="false">Polestar Applab All rights reserved</string>
    <string name="toast_arm64_package">Detected 64bit library in this clone. Please install 64bit support library if error happen.</string>
    <string name="clone_apps_title">Clone Apps</string>
    <string name="crash_hint">Sorry, some error happen, and we will fix it in next version.</string>
    <string name="text_Q1_title">Q1: Why cannot I receive message notifications from Superb Cloner enabled apps?</string>
    <string name="text_Q1_content_2">A1: Please ensure that Superb Cloner has network access</string>
    <string name="text_Q2_title">Q2: Will Superb Cloner collect and use my private information?</string>
    <string name="text_Q2_content">A2: No, Superb Cloner will only collect small amounts of your “public data” (e.g. Avatar, nickname etc), and these will only be used within your device to create a better user experience for you. Superb Cloner promises that none of your private data will be collected or used.</string>
    <string name="text_Q3_title">Q3: Why is Superb Cloner’s storage consumption increasing?</string>
    <string name="text_Q3_content">A3: All sub-accounts added on your device are by default listed under Superb Cloner by the Android operating system. For example, when you add a Facebook sub-account to your device, all of the storage used for your second Facebook account (app) is listed under Superb Cloner. Therefore, the storage consumption listed for Superb Cloner will appear to increase significantly when you add more sub-accounts. Rest assured that the storage consumption of Superb Cloner itself is not actually increasing by much.</string>
    <string name="text_Q4_title">Q4: Why has Superb Cloner used up so much storage space?</string>
    <string name="text_Q4_content">A4: All sub-accounts added on your device are by default listed under Superb Cloner by the Android operating system. The large amount of storage consumption listed under Superb Cloner is the overall total storage used for all sub-accounts you’ve added. Superb Cloner itself uses little storage.</string>
    <string name="text_Q5_title">Q5: How does Superb Cloner’s Private App function protects my privacy?</string>
    <string name="text_Q5_content">A5: A password is required to access Private Apps each time you wake your device. Additionally, all Private Apps are installed on Superb Cloner, and therefore all Private Apps’ data are not accessible by any external programs.</string>
    <string name="text_Q6_title">Q6: Why privacy locker not show up when app launch?</string>
    <string name="text_Q6_content">A6: Please check whether you enabled locker for this app and grant permission to Superb Cloner to show floating window. For example, on Xiaomi device, Settings->App Management->Superb Cloner->Permission Control->Floating Window.</string>
    <string name="text_Q7_title">Q7: Why shortcut cannot be created or camera, location not work?</string>
    <string name="text_Q7_content">A7: Please check whether you granted these permissions to Superb Cloner in your system setting.</string>
    <string name="text_Q8_title">Q8: Why some clones not work and toast missing 32bit library when start?</string>
    <string name="text_Q8_content">A8: When download app from Google Play, it will dynamically repack the package according to your device model and would optimize out 32bit library in some cases. For compatibility, Superb Cloner only packed 32bit clone engine to support most apps. But if error happen when open cloned app, suggest you try to download the full package of the cloned app from websites. Normally you can download the full apk from the download page of official website or apk website like apkpure.com.</string>
    <string name="clone_label_tag">%s+</string>
    <string name="powered_by_app" translatable="false">Powered by Superb Cloner</string>
    <string name="lock_settings_title">Locker Settings</string>
    <string name="enable_lock_settings_title">Privacy Locker</string>
    <string name="lock_interval_settings_title">Re-Lock Interval</string>
    <string name="lock_interval_settings_content">The interval to relock the app after you left it</string>
    <string name="enable_lock_settings_content">Toggle to enable or disable privacy locker feature</string>
    <string name="password_setting_title">Password Setting</string>
    <string name="password_set_no_question">No secure question set.</string>
    <string name="password_set_complete">Password was set.</string>
    <string name="no_password_set">Please set a password for locker at first.</string>
</resources>