<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/notification_settings"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_FAQ"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@mipmap/feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_with_friends" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/settings" />
    </group>

</menu>
