<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/white"
        android:paddingLeft="22dp">

        <com.polestar.multiaccount.widgets.BlueSwitch
            android:id="@+id/enable_lock_switch"
            android:layout_width="82.5dp"
            android:layout_height="70dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingTop="28dp"
            android:paddingBottom="28dp"
            android:gravity="center_horizontal"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/enable_lock_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="18dp"
            android:layout_toLeftOf="@id/enable_lock_switch"
            android:text="@string/enable_lock_settings_title"
            android:textColor="@color/text_gray_dark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enable_lock_title"
            android:layout_toLeftOf="@id/enable_lock_switch"
            android:text="@string/enable_lock_settings_content"
            android:textColor="@color/text_gray_light"
            android:textSize="10sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/locker_detailed_settings">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:onClick="onPasswordSettingClick"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/password_setting_title"
            android:textColor="@color/text_gray_dark"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>