<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_popular"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/content_popular"
            android:textColor="@color/text_gray_medium"
            android:textSize="14sp"/>

        <com.polestar.superclone.widgets.FixedListView
            android:id="@+id/app_list_popular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:dividerHeight="0.5dp"
            android:divider="#FFDDDDDD"
            android:layoutAnimation="@anim/app_list_anim_layout"
            android:paddingBottom="11dp">
        </com.polestar.superclone.widgets.FixedListView>

        <TextView
            android:id="@+id/text_recommand"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/content_recommend"
            android:textColor="@color/text_gray_medium"
            android:textSize="14sp"/>

        <com.polestar.superclone.widgets.FixedListView
            android:id="@+id/app_list_recommand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:dividerHeight="0.5dp"
            android:divider="#FFDDDDDD"
            android:layoutAnimation="@anim/app_list_anim_layout"
            android:paddingBottom="11dp">
        </com.polestar.superclone.widgets.FixedListView>

        <TextView
            android:id="@+id/sponsor_text"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/sponsor_text"
            android:textColor="@color/text_gray_medium"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ad_container"
            android:visibility="gone"
            android:background="@color/white"
            android:orientation="vertical">
        </LinearLayout>
        <TextView
            android:id="@+id/text_more"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/more_apps"
            android:textColor="@color/text_gray_medium"
            android:textSize="14sp"/>

        <com.polestar.superclone.widgets.FixedGridView
            android:id="@+id/app_list_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:layoutAnimation="@anim/grid_list_anim_layout"
            android:numColumns="4"
            android:stretchMode="columnWidth">
        </com.polestar.superclone.widgets.FixedGridView>
    </LinearLayout>

</ScrollView>

