<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/text_notification_dotspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:paddingLeft="22dp"
                android:text="@string/notifications"
                android:textColor="@color/primary_dark_material_dark"
                android:textSize="@dimen/title_bar_title_size"/>

            <TextView
                android:id="@+id/text_notification_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text_notification_dotspace"
                android:layout_below="@id/text_notification_dotspace"
                android:layout_marginTop="13dp"
                android:paddingLeft="22dp"
                android:text="@string/notification_decription"
                android:textColor="@color/gray"
                android:textSize="10sp"/>

            <com.polestar.multiaccount.widgets.BlueSwitch
                android:id="@+id/switch_notification_dotspace"
                android:layout_width="82.5dp"
                android:layout_height="70dp"
                android:paddingBottom="28dp"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:paddingTop="28dp"
                android:layout_alignParentRight="true">
            </com.polestar.multiaccount.widgets.BlueSwitch>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="22dp"
            android:text="@string/notification_detail_setting"
            android:textColor="@color/text_gray_light"
            android:textSize="12sp" />

        <com.polestar.multiaccount.widgets.FixedListView
            android:id="@+id/switch_notifications_apps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:background="@color/white">
        </com.polestar.multiaccount.widgets.FixedListView>

    </LinearLayout>

</ScrollView>

